fix: adjust color contrast title/button

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,8 +23,7 @@ h1 {
 .faded-black {
   font-family: $secondary-font;
   font-size: 0.875rem;
-  opacity: 0.5;
-  color: #121212;
+  color: #121211bf;
 }
 
 .sr-only {
